# durable

./: .env  .gitattributes  .gitignore  Cargo.toml  DST-RESEARCH.md  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml  schema-diff.sh
.cargo/: config.toml
.config/: nextest.toml
.sqlx/: query-20d16d2914bc03e3bdd46f015697c90c9c71d40e32432cf173a7fd6fb77c5ce8.json  query-2cf8e3335cff09bbdc0bcc0f292e167aa4df035772520a1243c5b5f4ee463bea.json  query-30f44b27222405aa89375b6b79107424fc7dfa6db6951849fb94900ed8e190d0.json  query-32dadf99d57cc8822dcb5d0c961e205dfe495683a41a092481b44ca49e25dc11.json  query-36b0970e1af499032f73b7974d43ebe6188e00186344ec881c5e339a5f0bb7c9.json  query-381af3d1e4161d5d1d07a622be6b6f7e1cbea777bb89d593d0487081d3ce145a.json  query-3bbef0b695c3dbaed5fe274e6d4e62fbf680280aae8f9ad7d3cf95f4f1deaded.json  query-3e5ac013b44f79280645f5b047c769c2b49c2c84b8e4fc14ed7ec17c3619b1f0.json  query-4b00eb27c0687f3a24729cf77dd35f3fc1e0436b5da9f2f96af0d5686f438a19.json  query-4bb061ea8b2df1791af1d34e4599c51e69b585bea674c4f6ac6ff544e164c7d3.json  query-4f5eb0238c822ef6eeea2ea094d6b4f6282b60772eb1c64a86816a51ea59ed25.json  query-58d5a00f231f95f89dce33bb578687ca1a110479d19fd56ae5ae47c8d4a4a45e.json  query-5d6584f635dd607563d134d3d0f7fe4d597f323487706d6b6b0b52d2ff214339.json  query-605c8c9ec1e6327f21c7a175f59a91b6874f63cc9168daf53a69d03455b5102e.json  query-62627f21394ed7851e834fd55d2b8fd68b5bf51d0b1278ca8421a1f36fd87509.json  query-67f92dc0e6da8c29a559a979b460dfb15a51401a24b06c1359ab4899e7d968ce.json  query-69e3a41200109d5036d229c3ee33e4fce9905647474ea0d445a6d3764cf4caf1.json  query-6afae92bdc034fd484f4f10b707991c193416b9fe48151a1e712ef3bc25e599a.json  query-6f238e137ba0b183abe312bb2beb5c2b0f1a2542ddd3f977d2b1c84d552f0daf.json  query-73f3e050b14065e3d25a13ff225952e2d13f61d34be3e004177c799b8ade0ed0.json  query-775263f590071917b90b555d438e2f4b62d2ad6c37da62a6a00580100b06e2a1.json  query-7a204104ee904fe7004337a7e7f8c2210d9ff9eb79c1224f2ce1d6a33fcbf247.json  query-7b00baf2d4fb4d803f5958c01da30f10f372a0b52286226e763c95975f22ca6b.json  query-7c8a61cb5415f825ae1498e222b99b5b99c6986016d7e0267e3787201a987c4a.json  query-7f746180eb4a64c9d07789d04ea2e173479e1a82efe0f289bb4baa03642a32b1.json  query-840865bd3cc1a6a72c8ed9605202067f0ffb7eb622c1924081ae8dff2905a86c.json  query-8646787e97a2e9c59fa9a1f2f510a48574aa64161b0ccc37be8bb58deaff5783.json  query-896f6e946931e4f55a0f97a40976c0a053d3971f3b3fa810c2cb9fca35ade68c.json  query-8e086d78a75c54b63c96225597764e31d82a666249c8cb1bbca40760bd7b2724.json  (+29 more)
crates/durable/: Cargo.toml  build.rs  regenerate.sh
crates/durable-bindgen/: Cargo.toml
crates/durable-bindgen/src/: lib.rs
crates/durable-cli/: Cargo.toml
crates/durable-cli/src/: events.rs  launch.rs  logs.rs  main.rs  notify.rs
crates/durable-client/: Cargo.toml  build.rs
crates/durable-client/src/: error.rs  lib.rs  program.rs  task.rs  util.rs  workflow.rs
crates/durable-client/src/event/: events.rs  mod.rs
crates/durable-core/: Cargo.toml  build.rs  regenerate.sh  wit
crates/durable-core/src/: alloc.rs  bindings.rs  ctor.c  lib.rs  notify.rs  start.rs  transaction.rs
crates/durable-core/wit/: durable.wit
crates/durable-http/: Cargo.toml  build.rs
crates/durable-http/src/: bindings.rs  lib.rs
crates/durable-migrate/: Cargo.toml
crates/durable-migrate/src/: apply.rs  error.rs  lib.rs
crates/durable-runtime/: Cargo.toml  build.rs  schema.sql  wit
crates/durable-runtime/migrations/: 01_initial.down.sql  01_initial.up.sql  02_fix_task_update_trigger.down.sql  02_fix_task_update_trigger.up.sql  03_limit_notify_subquery.down.sql  03_limit_notify_subquery.up.sql  04_column_timestamp.down.sql  04_column_timestamp.up.sql
crates/durable-runtime/src/: bindings.rs  clock.rs  config.rs  dst.rs  entropy.rs  error.rs  event.rs  flag.rs  lib.rs  main.rs  migrate.rs  resource.rs  scheduler.rs  task.rs  worker.rs
crates/durable-runtime/src/bindings/: bindings.rs  durable.rs  durable_impls.rs  mod.rs  types.rs
crates/durable-runtime/src/event/: events.rs  mod.rs
crates/durable-runtime/src/plugin/: mod.rs  util.rs
crates/durable-runtime/src/plugin/durable/: core.rs  http.rs  mod.rs  notify.rs  sql.rs
crates/durable-runtime/src/plugin/durable/sql/: mod.rs  oids.rs  type_info.rs  value.rs
crates/durable-runtime/src/plugin/wasi/: cli.rs  clocks.rs  filesystem.rs  io.rs  mod.rs  random.rs
crates/durable-runtime/src/task/: http.rs  mod.rs  sql.rs
crates/durable-runtime/src/util/: asyncfn.rs  interval.rs  mailbox.rs  metrics.rs  mod.rs  serde.rs
crates/durable-runtime/wit/: core.wit  http.wit  imports.wit  notify.wit  setup.wit  sql.wit
crates/durable-sqlx/: Cargo.toml  build.rs
crates/durable-sqlx-macros/: Cargo.toml
crates/durable-sqlx-macros/src/: lib.rs
crates/durable-sqlx/src/: bindings.rs  error.rs  lib.rs  macros.rs  util.rs
crates/durable-sqlx/src/driver/: arguments.rs  connection.rs  database.rs  decode.rs  encode.rs  error.rs  mod.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
crates/durable-sqlx/src/driver/types/: boolean.rs  bytea.rs  chrono.rs  float.rs  int.rs  ipnetwork.rs  json.rs  mod.rs  option.rs  text.rs  uuid.rs
crates/durable-test/: Cargo.toml  migrations  setup.sh
crates/durable-test-workflows/: Cargo.toml
crates/durable-test/src/: lib.rs
crates/durable-test/tests/: dst.rs
crates/durable-test/tests/it/: basic.rs  dst_notify.rs  main.rs  notify.rs  shutdown.rs  sqlx.rs
crates/durable-test/tests/it/fixtures/: extra-table.sql
crates/durable-worker/: Cargo.toml
crates/durable-worker/src/: main.rs
crates/durable/examples/: hello-world.rs  http-request.rs  notified.rs  sleep-n-go.rs  sleepy-sleep.rs  sql-query.rs
crates/durable/src/: bindings.rs  context.rs  error.rs  http.rs  lib.rs  notify.rs  start.rs  transaction.rs
crates/durable/src/bindings/: core.rs  mod.rs
crates/durable/src/sqlx/: database.rs  mod.rs  value.rs
crates/durable/wit/: durable.wit
crates/xtask/: Cargo.toml
crates/xtask/src/: claude.rs  dev.rs  generate.rs  main.rs  migrate.rs  package.rs  publish.rs
examples/: Cargo.toml
(+16 files in other folders)
