[workspace]
members = ["crates/*", "examples"]
resolver = "2"

[workspace.dependencies]
durable         = { path = "crates/durable" }
durable-http    = { path = "crates/durable-http" }
durable-sqlx    = { path = "crates/durable-sqlx" }
durable-core    = { path = "crates/durable-core" }
durable-client  = { path = "crates/durable-client" }
durable-migrate = { path = "crates/durable-migrate" }
durable-runtime = { path = "crates/durable-runtime" }

[profile.release]
debug = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
debug = "line-tables-only"
