[workspace]
members = ["crates/*", "examples"]
resolver = "2"

[workspace.package]
license = "Apache-2.0 OR MIT"
publish = ["iop-systems"]
repository = "https://github.com/iopsystems/durable"
homepage = "https://github.com/iopsystems/durable"


[workspace.dependencies]
durable         = { version = "0.1.0", registry = "iop-systems", path = "crates/durable" }
durable-http    = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-http" }
durable-sqlx    = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-sqlx" }
durable-core    = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-core" }
durable-client  = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-client" }
durable-migrate = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-migrate" }
durable-runtime = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-runtime" }
durable-bindgen = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-bindgen" }

[profile.release]
debug = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
debug = "line-tables-only"
