[workspace]
members = ["crates/*", "examples"]
resolver = "2"

[workspace.package]
version = "0.5.3"
license = "Apache-2.0 OR MIT"
publish = ["iop-systems"]
repository = "https://github.com/iopsystems/durable"
homepage = "https://github.com/iopsystems/durable"


[workspace.dependencies]
durable         = { version = "0.5.1", registry = "iop-systems", path = "crates/durable" }
durable-core    = { version = "0.5.1", registry = "iop-systems", path = "crates/durable-core" }
durable-http    = { version = "0.5.1", registry = "iop-systems", path = "crates/durable-http" }
durable-sqlx    = { version = "0.5.1", registry = "iop-systems", path = "crates/durable-sqlx" }

durable-client  = { version = "0.1.1", registry = "iop-systems", path = "crates/durable-client" }
durable-migrate = { version = "0.1.0", registry = "iop-systems", path = "crates/durable-migrate" }
durable-runtime = { version = "0.4.3", registry = "iop-systems", path = "crates/durable-runtime" }
durable-bindgen = { version = "0.1.2", registry = "iop-systems", path = "crates/durable-bindgen" }

wit-bindgen-core = { version = "0.30.0" }
wit-bindgen-rust = { version = "0.30.0" }
wit-bindgen-rt   = { version = "0.30.0" }

# These 3 need to be updated in sync.
wasmtime             = { version = "24.0" }
wasmtime-wit-bindgen = { version = "24.0" }
wit-parser           = { version = "0.215.0" }

[workspace.dependencies.durable-sqlx-macros]
version = "0.8.1"
registry = "iop-systems"
path = "crates/durable-sqlx-macros" 

[profile.release]
debug = true

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = true
debug = "line-tables-only"

[profile.dev-ci]
inherits = "dev"
debug = "line-tables-only"
opt-level = 1

[profile.dev-ci.package."*"]
debug = false

[profile.dev-ci.build-override]
debug = false
strip = true
