[package]
name = "durable-bindgen"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.86"
prettyplease = "0.2.20"
syn = { version = "2.0.72", features = ["full"] }
wit-bindgen-core = "0.28.0"
wit-bindgen-rust = "0.28.0"
