[package]
name = "durable-bindgen"
version = "0.1.2"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Bindings generator for durable"

[dependencies]
anyhow = "1.0.86"
prettyplease = "0.2.20"
syn = { version = "2.0.72", features = ["full"] }
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true }
