[package]
name = "durable-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "durable"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["env", "derive"] }
serde = "1.0.204"
serde_json = { version = "1.0.120", features = ["raw_value"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.39.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

