[package]
name = "durable-cli"
version = "0.1.3"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "CLI for interacting with a durable cluster"

[[bin]]
name = "durable"
path = "src/main.rs"

[dependencies]
durable-client = { workspace = true }

anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["env", "derive"] }
futures-util = "0.3.30"
log = "0.4.22"
serde = "1.0.204"
serde_json = { version = "1.0.120", features = ["raw_value"] }
tabled = "0.20.0"
tokio = { version = "1.39.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[dependencies.sqlx]
version = "0.8.0"
features = ["postgres", "runtime-tokio", "tls-rustls"]
