[package]
name = "durable-client"
version = "0.1.0"
edition = "2021"

[features]
development = [
    "sqlx/runtime-tokio",
    "sqlx/tls-rustls"
]

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.38"
crossbeam-utils = "0.8.20"
futures-core = "0.3.30"
futures-util = "0.3.30"
serde = "1.0.204"
serde_json = "1.0.121"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["chrono", "macros", "postgres"] }
wasmparser = { version = "0.214.0", features = ["validate"] }
weak-table = "0.3.2"
