[package]
name = "durable-core"
version = "0.1.0"
edition = "2021"

[features]
bindgen = ["dep:durable-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
wit-bindgen-rt = "0.28.0"

[build-dependencies]
durable-bindgen = { path = "../durable-bindgen", optional = true }

cc = "1.0"

