[package]
name = "durable-core"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
bindgen = ["dep:durable-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
wit-bindgen-rt = "0.28.0"

[build-dependencies]
durable-bindgen = { workspace = true, optional = true }

cc = "1.0"

