[package]
name = "durable-http"
version = "0.1.0"
edition = "2021"

[dependencies]
durable-core = { path = "../durable-core" }

chrono = "0.4"
http = "1.0"
http-serde-ext = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
url = { version = "2.5.2", features = ["serde"] }
wit-bindgen-rt = "0.28.0"

[build-dependencies]
durable-bindgen = { path = "../durable-bindgen" }
