[package]
name = "durable-http"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "HTTP client for durable workflows"

[dependencies]
durable-core = { workspace = true }

chrono = "0.4"
http = "1.0"
http-serde-ext = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
url = { version = "2.5.2", features = ["serde"] }
wit-bindgen-rt = { workspace = true }

[dev-dependencies]
durable = { workspace = true, features = ["http"] }
