[package]
name = "durable-migrate"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[features]
default = ["migrate"]
migrate = ["dep:sqlx", "dep:tracing"]

[dependencies]
thiserror = "1.0.63"
tracing = { version = "0.1.40", optional = true }

[dependencies.sqlx]
version = "0.8.0"
optional = true
features = ["postgres"]

[dev-dependencies]
tempdir = "0.3.7"
