[package]
name = "durable-migrate"
version = "0.1.1"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Database migration support for durable"

[features]
migrate = ["dep:sqlx", "dep:tracing"]

[dependencies]
thiserror = "2.0"
tracing = { version = "0.1.40", optional = true }

[dependencies.sqlx]
version = "0.8.0"
optional = true
default-features = false
features = ["postgres"]

[dev-dependencies]
tempfile = "3.12.0"
