
[package]
name = "durable-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber", "tokio/full"]
regen = []

[[bin]]
name = "durable-server"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
futures-concurrency = "7.6.1"
futures-util = "0.3.30"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
slab = "0.4.9"
tokio = { version = "1.39.1", features = ["macros", "sync"] }
tracing = "0.1.40"
wasmtime = "23.0.1"

clap = { version = "4.0", optional = true, features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "fmt",
    "env-filter",
] }
http = "1.1.0"

[dependencies.sqlx]
version = "0.8.0"
features = ["postgres", "runtime-tokio", "tls-rustls"]
