
[package]
name = "durable-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber", "tokio/full"]
regen = []

[[bin]]
name = "durable-server"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
anymap3 = "1.0.0"
async-stream = "0.3.5"
async-trait = "0.1.81"
chrono = "0.4.38"
clap = { version = "4.0", optional = true, features = ["derive", "env"] }
futures-concurrency = "7.6.1"
futures-util = "0.3.30"
getrandom = "0.2.15"
http = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
slab = "0.4.9"
tokio = { version = "1.39.1", features = ["macros", "sync"] }
tracing = "0.1.40"
wasmtime = "23.0.1"

[dependencies.sqlx]
version = "0.8.0"
features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["fmt", "env-filter"]

[build-dependencies]
anyhow = "1.0.86"
prettyplease = "0.2.20"
syn = { version = "2.0.72", features = ["full"] }
wasmtime-wit-bindgen = "23.0.1"
wit-parser = "0.212.0"

