
[package]
name = "durable-runtime"
version = "0.4.16"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Runtime for durable workflows"

[features]
# Enable the use of tokio-console with the runtime CLI.
#
# This doesn't do much unless --cfg tokio_unstable is included in rustflags.
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
durable-migrate = { workspace = true, features = ["migrate"] }

ahash = "0.8.11"
anyhow = "1.0.86"
anymap3 = "1.0.0"
async-stream = "0.3.5"
async-trait = "0.1.81"
cache-compute = "0.3.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.0", optional = true, features = ["derive", "env"] }
console-subscriber = { version = "0.4.0", optional = true }
derive_setters = "0.1.6"
ipnetwork = "0.20.0"
futures-concurrency = "7.6.1"
futures-util = "0.3.30"
getrandom = "0.2.15"
http = "1.1.0"
humantime = "2.1.0"
log = "0.4.22"
parking_lot = "0.12.3"
pin-project = "1.1.5"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
sha2 = "0.10.8"
slab = "0.4.9"
tokio = { version = "1.39.1", features = ["macros", "sync", "rt-multi-thread"] }
tracing = "0.1.40"
uluru = "3.1.0"
uuid = { version = "1.10.0", features = ["serde"] }
wasmtime = { workspace = true }
url = "2.5.2"

[dependencies.sqlx]
version = "0.8.0"
features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "ipnetwork"
]

[dependencies.sqlx-postgres]
version = "0.8.0"
features = ["offline"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["fmt", "env-filter"]

[target.'cfg(unix)'.dependencies]
backtrace-on-stack-overflow = { version = "0.3", optional = true }

[dev-dependencies]
toml = "0.8"

[build-dependencies]
durable-migrate = { workspace = true }

anyhow = "1.0.86"
wasmtime-wit-bindgen = { workspace = true}
wit-parser = { workspace = true }
