[package]
name = "durable-sqlx"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "SQLx bindings for durable guests"

[features]
bindgen = ["dep:durable-bindgen", "durable-core/bindgen"]
macros = ["durable-sqlx-macros", "sqlx/macros"]

[dependencies]
durable-core = { workspace = true }
durable-sqlx-macros = { workspace = true, optional = true }

async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
serde = "1.0.204"
sqlx = { version = "0.8.0", default-features = false }
sqlx-core = { version = "0.8.0", default-features = false }
url = "2.5.2"
wit-bindgen-rt = { workspace = true }
thiserror = "1.0.63"

[build-dependencies]
durable-bindgen = { workspace = true, optional = true }

[dev-dependencies]
durable = { workspace = true, features = ["sqlx", "sqlx-macros"] }
