[package]
name = "durable-sqlx"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "SQLx bindings for durable guests"

[features]
macros = ["durable-sqlx-macros", "sqlx/macros"]

json = ["sqlx/json", "sqlx-core/json", "durable-sqlx-macros?/json"]
chrono = ["sqlx/chrono", "durable-sqlx-macros?/chrono", "dep:chrono"]
uuid = ["sqlx/uuid", "durable-sqlx-macros?/uuid", "dep:uuid"]
ipnetwork = ["sqlx/ipnetwork", "durable-sqlx-macros?/ipnetwork", "dep:ipnetwork"]

[dependencies]
durable-core = { workspace = true }
durable-sqlx-macros = { workspace = true, optional = true }

async-stream = "0.3.5"
chrono = { version = "0.4.38", optional = true }
futures-core = "0.3.30"
futures-util = "0.3.30"
ipnetwork = { version = "0.20.0", features = ["serde"], optional = true }
log = "0.4.22"
serde = "1.0.204"
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.8.5", default-features = false }
sqlx-core = { version = "0.8.5", default-features = false }
url = "2.5.2"
wit-bindgen-rt = { workspace = true }
thiserror = "2.0.0"
uuid = { version = "1.10.0", features = ["serde"], optional = true }

[dev-dependencies]
durable = { workspace = true, features = ["sqlx", "sqlx-macros"] }
