[package]
name = "durable-test-workflows"
version = "0.0.0"
edition = "2021"
license = { workspace = true }
publish = false

[lib]
test = false

[dependencies]
durable = { workspace = true, features = ["http", "sqlx", "sqlx-macros"] }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
