[package]
name = "durable-test"
version = "0.0.0"
edition = "2021"
publish = false
license = { workspace = true }

[dependencies]
durable-client = { workspace = true }
durable-runtime = { workspace = true }

anyhow = "1.0"
dotenvy = "0.15.7"
serde_json = "1.0.125"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full", "macros"] }
wasmtime = { workspace = true }
futures = "0.3.30"
