[package]
name = "durable"
version = "0.1.0"
edition = "2021"

[features]
default = []

http = ["dep:durable-http"]
sqlx = ["dep:durable-sqlx"]

bindgen = ["durable-core/bindgen", "durable-http?/bindgen", "durable-sqlx?/bindgen"]

[dependencies]
durable-core = { path = "../durable-core" }
durable-http = { path = "../durable-http", optional = true }
durable-sqlx = { path = "../durable-sqlx", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

[[example]]
name = "hello-world"
crate-type = ["bin"]

[[example]]
name = "http-request"
required-features = ["http"]

[[example]]
name = "sql-query"
required-features = ["sqlx"]
