[package]
name = "durable"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
default = []

http = ["dep:durable-http"]
sqlx = ["dep:durable-sqlx"]

bindgen = ["durable-core/bindgen", "durable-http?/bindgen", "durable-sqlx?/bindgen"]

[dependencies]
durable-core = { workspace = true }
durable-http = { workspace = true, optional = true }
durable-sqlx = { workspace = true, optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
