[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
durable-bindgen = { path = "../durable-bindgen" }
durable-migrate = { path = "../durable-migrate" }

anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.39.2", features = ["rt", "macros", "signal", "process"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xshell = "0.2.6"
tracing = "0.1.40"
libc = "0.2.155"
